--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "slim/php-view": "^3.0",
         "php-di/php-di": "^6.3",
         "tightenco/collect": "^8.15",
-        "symfony/string": "^5.2"
+        "symfony/string": "^5.2",
+        "slim/flash": "^0.4.0"
     }
 }
